--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,9 @@ TWITTER_ACCESS_TOKEN=
 TWITTER_ACCESS_SECRET=
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
-TWITTER_USER_ID=993962483332329472
 BINANCE_API_KEY=
 BINANCE_API_SECRET=
-BINANCE_FIAT=USDT
+BINANCE_PAIR=USDT
 BINANCE_INTERVAL=1m
 TAKE_PROFIT=1.01
 STOP_LOSS=1.015
