--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-TWITTER_BEARER_TOKEN=
 TWITTER_ACCESS_TOKEN=
 TWITTER_ACCESS_SECRET=
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
 BINANCE_API_KEY=
 BINANCE_API_SECRET=
+BINANCE_TEST=false
 BINANCE_PAIR=USDT
 BINANCE_INTERVAL=1m
 TAKE_PROFIT=1.01
