Implement Listen command

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ TWITTER_CONSUMER_SECRET=
 BINANCE_API_KEY=
 BINANCE_API_SECRET=
 BINANCE_TEST=false
+BINANCE_AMOUNT_PER_TRADE=15
 BINANCE_PAIR=USDT
 BINANCE_INTERVAL=1m
 TAKE_PROFIT=1.01
