--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": "^7.3|^8.0",
         "guzzlehttp/guzzle": "^6.5.5",
         "illuminate/http": "^8.0",
+        "illuminate/log": "^8.0",
         "laminas/laminas-text": "^2.8",
         "laravel-zero/framework": "^8.8",
         "spatie/twitter-streaming-api": "^1.4"
