--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require-dev": {
         "mockery/mockery": "^1.4.3",
-        "pestphp/pest": "^1.3"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
